# sak-note

./: .gitignore  E2E_TEST_PLAN.md  EDITOR_FIX.md  FEATURES_IMPLEMENTED.md  FEATURE_LIST.md  FEATURE_STATUS.md  INSTALL_WINDOWS.md  LICENSE  LOGGING_GUIDE.md  LOGGING_SUMMARY.md  PROGRESS.md  SITE_MANAGER_TEST.md  TEST_REPORT.md  TODO.md  UI_MODULE_MAPPING.md  UI_REGISTRY_PLAN.md  WINDOWS_BUILD_FIX.md  build.bat  build.sh  help.sh  install.bat  install.sh  package-lock.json  package.json  playwright.config.ts  tauri_testing_strategy.md
docs/: LLM_FRIENDLY_ARCHITECTURE.md  LLM_GUIDE.md  NOTEPAD_PLUS_PLUS_FEATURES.md  NOTEPAD_PLUS_PLUS_REFERENCE.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_DESIGN.md  PLUGIN_SYSTEM_V1.md
plugins/sample-plugin/: Cargo.toml  README.md  plugin.json
plugins/sample-plugin/src/: lib.rs
scripts/: auto-test.sh  e2e-test-suite.sh  run-with-logs.sh  test-framework.sh  view-logs.sh  xdotool-test-suite-v2.sh  xdotool-test-suite.sh
scripts/e2e-tests/: edit-operations.test.sh  file-operations.test.sh  navigation.test.sh  view-operations.test.sh
src-frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src-frontend/src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bookmark_commands.rs  bookmark_engine.rs  find_in_files.rs  lib.rs  line_operations.rs  main.rs  print_manager.rs  recent_files.rs  session_manager.rs  sftp_commands.rs  sftp_site_manager.rs  ui_commands.rs
src-tauri/src/file_engine/: chunk.rs  mod.rs
src-tauri/src/mark_engine/: mod.rs
src-tauri/src/mcp_server/: handlers.rs  mod.rs  tools.rs  tools_complete.rs
src-tauri/src/modular/: mod.rs
src-tauri/src/modules/: file_module.rs  llm_module.rs  marks_module.rs  mod.rs  sftp_module.rs
src-tauri/src/plugin_runtime/: bridge.rs  commands.rs  manager.rs  mod.rs  plugin_api.rs  wasm_engine.rs
src-tauri/src/sak_format/: mod.rs
src-tauri/src/semantic/: blocks.rs  bridge.rs  commands.rs  conversation.rs  fix_all.py  fix_bridge.py  fix_line209.py  intelligent_marks.rs  mcp.rs  mod.rs  parser.rs  query.rs
src-tauri/src/vfs/: local.rs  manager.rs  mod.rs  remote.rs  tests.rs
src-tauri/tests/: line_index_test  line_index_test.rs  perf_test  perf_test.rs
test-results/: .last-run.json
tests/: auto_browser_test.py  manual_browser_test.py  run_all_tests.sh  test-file-content-display.py  test-file-display-manual.md
(+103 files in other folders)
