[package]
name = "sak-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
thiserror = "1.0"
once_cell = "1.19"
dashmap = "5.5"
flate2 = "1.0"
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
