[package]
name = "sak-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
thiserror = "1.0"
once_cell = "1.19"
dashmap = "5.5"
flate2 = "1.0"
crc32fast = "1.3"
ssh2 = "0.9"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
regex = "1.10"
directories = "5.0"
walkdir = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5.0"
tauri-plugin-dialog = "2"
wasmtime = "23.0"
wasmtime-wasi = "23.0"
wit-bindgen = "0.30"
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
