[package]
name = "sample-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for small binary size
opt-level = "z"
lto = true
strip = true
panic = "abort"